--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "gulp-sass": "^5.1.0",
         "gulp-sass-glob-use-forward": "^0.1.3",
         "gulp-webp": "^4.0.1",
+        "imagesloaded": "^5.0.0",
         "lodash": "^4.17.20",
         "photoswipe": "^5.3.0",
         "postcss": "^8.4.12",
